--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,11 @@
 .App-link {
   color: #61dafb;
 }
-
+.rdw-editor-main
+{
+  height: 95% !important;
+  width: 100% !important;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
